@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: eval.h,v 1.104 2003/03/03 19:20:29 thyssen Exp $
+ * $Id: eval.h,v 1.105 2003/03/13 20:33:29 thyssen Exp $
  */
 
 #ifndef _EVAL_H_
@@ -122,6 +122,8 @@ typedef struct _rolloutcontext {
   unsigned int fTruncBearoff2 : 1; /* cubeless rollout: trunc at BEAROFF2 */
   unsigned int fTruncBearoffOS: 1; /* cubeless rollout: trunc at BEAROFF_OS */
   unsigned short nLate; /* switch evaluations on move nLate of game */
+  unsigned short int fIgnoreJacobyCubeless; /* ignore Jacoby rule for cubeless
+                                         money game rollouts */
   rng rngRollout;
   int nSeed;
 
